# IA-Fatura

./: .replit  Dockerfile  README.md  cadastro.html  login.html  main.py  pyproject.toml  requirements.txt  splash.html  upload.html
parser/: ai_parser.py  detector.py  factory.py  light_parser.py  smart_parser.py  utils.py
templates/: cadastro.html  dashboard.html  dashboard_geral.html  graficos.html  login.html  relatorio.html  splash.html  upload.html
